--- a/Project-1/Project 1.html
+++ b/Project-1/Project 1.html
@@ -18,8 +18,7 @@
 			
 		}
 				#topmost{
-					font-size: 60px;
-					padding: 6px;
+					font-size: 60px; 	 
 				}
 
 		#navigation{
@@ -114,10 +113,20 @@
 						color: hotpink;
 					}
 
+					#useful span{
+						margin-left: -40px;
+					}
+
 					a:visited{
 						color: hotpink;
 						text-decoration: underline;
 					}
+
+			
+			.foot img{
+				width: 15px;
+				align-self: center;
+			}
 
 			#copyright{
 				width: 100%;
@@ -222,13 +231,14 @@
 					</div>
 
 
-					<div>
+					<div class="foot">
 						
 						<h1>Search</h1>
 						<form>
 						<input type="text" name="fname" placeholder="Enter Keywords ...">
-						&nbsp;&nbsp;&nbsp;<a href=""><span>&#128270;</span></a>
+						&nbsp;&nbsp;&nbsp;<a href=""><img src="images/109-1093260_search-loop-svg-png-icon-free-download-524293-removebg-preview.png"></a>
 						</form>
+						<br>
 					</div>
 			</div>
 
